--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,5 +1,6 @@
 
 @import 'down-arrow.css';
+@import 'packery.css';
 
 .home {
   background: url('/img/cover.jpg') center bottom no-repeat;
@@ -19,7 +20,6 @@
   right: 0;
   bottom: 0;
   left: 0;
-  /*background-image: linear-gradient(to top, #FE595A, rgba(0,0,0,0));*/
   opacity: 1;
 }
 
