--- a/public/css/animations.css
+++ b/public/css/animations.css
@@ -42,6 +42,7 @@
 .tween-subtitle {
     color: #252525;
     font-family: 'Montserrat', sans-serif;
+    font-size: 1rem;
     font-style: italic;
     font-weight: 900;
 }
