--- a/public/css/animations.css
+++ b/public/css/animations.css
@@ -96,7 +96,7 @@
     top: 128px;
 }
 
-.screen, .blink1, .blink2, .blink2, .blink3, .circle1, .circle2, .pen, .design {
+.screen, .blink1, .blink2, .blink2, .blink3, .circle1, .circle2, .pen {
   opacity: 0;
 }
 
