--- a/public/css/style.css
+++ b/public/css/style.css
@@ -26,6 +26,16 @@
   opacity: 1;
 }
 
+.featured-image {
+  width: 100%;
+  height: 50%;
+}
+
+.image-dimension {
+  content: '';
+  height: 320px;
+}
+
 .title {
   color: #252525;
   font-size: 2rem;
