--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,7 +1,6 @@
 
-@import 'down-arrow.css';
 @import 'packery.css';
-@import 'animations.css';
+@import 'animations.new.css';
 
 .home {
   background: url('/img/cover.jpg');
@@ -10,7 +9,7 @@
 
 .hero {
   width: 100%;
-  height: 100%;
+  height: 105%;
   background-size: cover;
   background-position: 50% 50%;
   background-repeat: no-repeat;
@@ -60,6 +59,17 @@
     text-transform: uppercase;
     display: block;
     line-height: 2.5;
+}
+
+.single-post-title {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+.modal-body p {
+  line-height: 2;
 }
 
 @media screen and (min-width: 480px) {
