--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,86 +1,83 @@
-
-@import 'packery.css';
-@import 'animations.new.css';
-
+@import "packery.css", "animations.new.css";
 .home {
-  background: url('/img/cover.jpg');
-  background-color: #FDD351;
+    background: url('/img/cover.jpg');
+    background-color: #FDD351;
 }
 
 .hero {
-  width: 100%;
-  height: 105%;
-  background-size: cover;
-  background-position: 50% 50%;
-  background-repeat: no-repeat;
-  background-blend-mode: screen;
+    width: 100%;
+    height: 105%;
+    background-blend-mode: screen;
+    background-repeat: no-repeat;
+    background-position: 50% 50%;
+    background-size: cover;
 }
+
 .hero:before {
-  content: '';
-  position: absolute;
-  top: 0;
-  right: 0;
-  bottom: 0;
-  left: 0;
-  opacity: 1;
+    content: '';
+    position: absolute;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    opacity: 1;
 }
 
 .featured-image {
-  width: 100%;
-  height: 50%;
+    width: 100%;
+    height: 50%;
+    background-color: #FDD351 !important;
+    background-blend-mode: screen;
 }
 
 .image-dimension {
-  content: '';
-  height: 320px;
+    content: '';
+    height: 320px;
 }
 
 .title {
-  color: #252525;
-  font-size: 2rem;
+    color: #252525;
+    font-size: 2rem;
 }
 
 .sp-center {
-  text-align: center;
+    text-align: center;
 }
 
 .logo img {
-  width: 50%;
-  margin-bottom: 16px;
+    width: 50%;
+    margin-bottom: 16px;
 }
 
-.links > a {
-    color: #252525;
+.links>a {
+    display: block;
     padding: 0 25px;
-    font-size: 12px;
-    font-weight: 600;
-    letter-spacing: .1rem;
+    color: #252525;
     text-decoration: none;
     text-transform: uppercase;
-    display: block;
+    font-size: 12px;
+    font-weight: 600;
     line-height: 2.5;
+    letter-spacing: .1rem;
 }
 
 .single-post-title {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
+    position: absolute;
+    top: 25%;
+    left: 50%;
+    transform: translate(-50%, -25%);
 }
 
 .modal-body p {
-  line-height: 2;
+    line-height: 2;
 }
 
 @media screen and (min-width: 480px) {
-
-  .title {
-    font-size: 4rem !important;
-  }
-
-  .links > a {
-    display: inline-block;
-    line-height: 1.5;
-  }
-
+    .title {
+        font-size: 4rem !important;
+    }
+    .links>a {
+        display: inline-block;
+        line-height: 1.5;
+    }
 }
