--- a/public/css/animations.new.css
+++ b/public/css/animations.new.css
@@ -70,5 +70,11 @@
     transform: translateX(-50%);
 }
 
+.carousel-control-prev,
+.carousel-control-next {
+  background-color: #252525;
+  opacity: .1;
+}
+
 @media screen and (min-width : 480px) {
 }
