--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,5 +1,12 @@
 @import "packery.css";
 @import "animations.new.css";
+
+main {
+  width: 100%;
+  height: 100%;
+}
+
+
 .home {
     background: url('/img/cover.jpg');
     background-color: #FDD351;
@@ -46,8 +53,13 @@
 }
 
 .logo img {
-    width: 50%;
+    width: 30%;
     margin-bottom: 16px;
+}
+
+.logo__eu img {
+  width: 15%;
+  margin-bottom: 16px;
 }
 
 .links>a {
