--- a/resources/assets/sass/_variables.scss
+++ b/resources/assets/sass/_variables.scss
@@ -268,8 +268,8 @@ $font-size-h5: 1.25rem !default;
 $font-size-h6: 1rem !default;
 
 $headings-margin-bottom: ($spacer / 2) !default;
-$headings-font-family:   inherit !default;
-$headings-font-weight:   500 !default;
+$headings-font-family:   $font-family-sans-serif !default;
+$headings-font-weight:   900 !default;
 $headings-line-height:   1.1 !default;
 $headings-color:         inherit !default;
 
