--- a/public/css/style.css
+++ b/public/css/style.css
@@ -7,10 +7,10 @@ main {
 }
 
 
-.home {
+/*.home {
     background: url('/img/cover.jpg');
     background-color: #FDD351;
-}
+}*/
 
 .hero {
     width: 100%;
