--- a/public/css/home.css
+++ b/public/css/home.css
@@ -1,7 +1,7 @@
 .main-wrapper {
   background: #dcefea;
   position: relative;
-  height: 100vh;
+  min-height: 30vh;
   max-width: 100vw;
   overflow: hidden;
 }
