--- a/public/css/home.css
+++ b/public/css/home.css
@@ -163,6 +163,7 @@
 .modal__inner, .modal__location, .modal__link {
   z-index: 11;
   position: absolute;
+  color: #252525;
 }
 
 .modal-text-class {
