--- a/public/css/home.css
+++ b/public/css/home.css
@@ -88,7 +88,7 @@
 
 .color-4 {
   /*d9dbdc*/
-  /*hover: */
+  /*hover: f7d5d9 */
   fill: #d9dbdc;
 }
 
@@ -121,7 +121,7 @@
 .mic-g:hover > .color-1 { fill: #ff888e; }
 .mic-g:hover > .color-2 { fill: #fc656d; }
 .mic-g:hover > .color-3 { fill: #f43d47; }
-.mic-g:hover > .color-4 { fill: #d9dbdc; }
+.mic-g:hover > .color-4 { fill: #f7d5d9; }
 .mic-g:hover > .color-5 { fill: #f1f1f2; }
 .mic-g:hover > .color-6 { fill: #fd4e50; }
 .mic-g:hover > .color-7 { fill: #f9b4b8; }
@@ -131,6 +131,22 @@
 .film-space-g:hover > .color-2 { fill: #fc656d; }
 .film-space-g:hover > .color-5 { fill: #f1f1f2; }
 
+.nerve-centre-g:hover > .color-1 { fill: #ff888e; }
+.nerve-centre-g:hover > .color-2 { fill: #fc656d; }
+.nerve-centre-g:hover > .color-3 { fill: #f43d47; }
+.nerve-centre-g:hover > .color-5 { fill: #f1f1f2; }
+.nerve-centre-g:hover > .color-8{ fill: #f7f2f3; }
+
+.bicocca-g:hover > .color-1 { fill: #ff888e; }
+.bicocca-g:hover > .color-2 { fill: #fc656d; }
+.bicocca-g:hover > .color-3 { fill: #f43d47; }
+.bicocca-g:hover > .color-4 { fill: #f7d5d9; }
+.bicocca-g:hover > .color-8 { fill: #f7f2f3; }
+
+.belgrado-g:hover > .color-1 { fill: #ff888e; }
+.belgrado-g:hover > .color-2 { fill: #fc656d; }
+.belgrado-g:hover > .color-3 { fill: #f43d47; }
+.belgrado-g:hover > .color-4 { fill: #f7d5d9; }
 
 
 /*
@@ -140,20 +156,9 @@
 .belgrado-g:hover > .color-5 { fill: #fc656d; }
 .belgrado-g:hover > .color-7 { fill: #f9b4b8; }
 
-.nerve-centre-g:hover > .color-1 { fill: #ff888e; }
-.nerve-centre-g:hover > .color-5 { fill: #fc656d; }
-.nerve-centre-g:hover > .color-6 { fill: #f7e8eb; }
 
-.bicocca-g:hover > .color-1 { fill: #ff888e; }
-.bicocca-g:hover > .color-2 { fill: #f7d5d9; }
-.bicocca-g:hover > .color-3 { fill: #f43d47; }
-.bicocca-g:hover > .color-4 { fill: #fc656d; }
-.bicocca-g:hover > .color-6 { fill: #f7e8eb; }
-.bicocca-g:hover > .color-7 { fill: #f9b4b8; }
 
-.film-space-g:hover > .color-1 { fill: #ff888e; }
-.film-space-g:hover > .color-2 { fill: #f7d5d9; }
-.film-space-g:hover > .color-5 { fill: #fc656d; }*/
+*/
 
 .modal-trans {
   z-index: 9;
