--- a/public/css/home.css
+++ b/public/css/home.css
@@ -189,7 +189,7 @@
 
 .modal-text-title {
   font-family: monospace;
-  padding: 20px 5%;
+  padding: 120px 5% 20px 5%;
 }
 
 .web-link, .map-place {
