--- a/public/css/home.css
+++ b/public/css/home.css
@@ -1,217 +1,291 @@
-#news { display:none; }
-
+#news {
+  display : none;
+}
 
 .main-wrapper {
-  background: #fff6d2;
-  position: relative;
-  min-height: 30vh;
-  max-width: 100vw;
-  overflow: hidden;
+  position   : relative;
+  max-width  : 100vw;
+  min-height : 30vh;
+  overflow   : hidden;
+  background : #fff6d2;
+  margin-top : 70px;  
 }
 
 .back1 {
-  background: url('./home/tour-eiffel.svg');
-  background-repeat: repeat-x;
-  width: 100%;
-  height: 100%;
-  position: absolute;
-  z-index: 1;
-  background-position: -1200px 0;
+  z-index             : 1;
+  position            : absolute;
+  width               : 100%;
+  height              : 100%;
+  background          : url('./home/tour-eiffel.svg');
+  background-repeat   : repeat-x;
+  background-position : -1200px 0;
 }
 
 .back2 {
-  background: url('./home/brandev.svg');
-  background-repeat: repeat-x;
-  width: 100%;
-  height: 100%;
-  position: absolute;
-  z-index: 2;
+  z-index           : 2;
+  position          : absolute;
+  width             : 100%;
+  height            : 100%;
+  background        : url('./home/brandev.svg');
+  background-repeat : repeat-x;
 }
 
 .back3 {
-  background: url('./home/duomo.svg');
-  background-repeat: repeat-x;
-  width: 100%;
-  height: 100%;
-  position: absolute;
-  z-index: 3;
+  z-index           : 3;
+  position          : absolute;
+  width             : 100%;
+  height            : 100%;
+  background        : url('./home/duomo.svg');
+  background-repeat : repeat-x;
 }
 
 .color-bg {
-  fill:   #fff6d2;
+  fill : #fff6d2;
 }
 
 #tour-eiffel {
-  position: absolute;
-  z-index: 1;
+  z-index  : 1;
+  position : absolute;
 }
 
 #brandev {
-  position: absolute;
-  z-index: 2;
+  z-index  : 2;
+  position : absolute;
 }
 
 #duomo {
-  position: absolute;
-  z-index: 3;
+  z-index  : 3;
+  position : absolute;
 }
 
-
-
 #logo-img {
-  position: absolute;
-  z-index: 7;
-  max-width: 100%;
+  z-index   : 7;
+  position  : absolute;
+  max-width : 100%;
 }
 
 .group {
-  overflow: hidden;
+  overflow : hidden;
 }
 
 .color-1 {
-  /*989a9d*/
-  /*hover: ff888e*/
-  fill: #989a9d;
+  /* 989a9d */
+  /* hover: ff888e */
+  fill : #989a9d;
 }
 
 .color-2 {
-  /*85878a*/
-  /*hover: fc656d*/
-  fill: #85878a;
+  /* 85878a */
+  /* hover: fc656d */
+  fill : #85878a;
 }
 
 .color-3 {
-  /*606060*/
-  /*hover: f43d47*/
-  fill: #606060;
+  /* 606060 */
+  /* hover: f43d47 */
+  fill : #606060;
 }
 
 .color-4 {
-  /*d9dbdc*/
-  /*hover: f7d5d9 */
-  fill: #d9dbdc;
+  /* d9dbdc */
+  /* hover: f7d5d9 */
+  fill : #d9dbdc;
 }
 
 .color-5 {
-  /*f1f1f2*/
-  /*hover: */
-  fill: #f1f1f2;
+  /* f1f1f2 */
+  /* hover: */
+  fill : #f1f1f2;
 }
 
 .color-6 {
-  /*6b6c6f*/
-  /*hover: fd4e50 */
-  fill: #6b6c6f;
+  /* 6b6c6f */
+  /* hover: fd4e50 */
+  fill : #6b6c6f;
 }
 
 .color-7 {
-  /*bdbfc1*/
-  /*hover: f9b4b8*/
-  fill: #bdbfc1;
+  /* bdbfc1 */
+  /* hover: f9b4b8 */
+  fill : #bdbfc1;
 }
 
 .color-8 {
-  /*ffffff*/
-  /*hover: f7f2f3*/
-  fill: #ffffff;
+  /* ffffff */
+  /* hover: f7f2f3 */
+  fill : #ffffff;
 }
 
-.mic-g, .belgrado-g, .nerve-centre-g, .bicocca-g, .film-space-g { cursor: pointer; }
+.belgrado-g,
+.bicocca-g,
+.film-space-g,
+.mic-g,
+.nerve-centre-g {
+  cursor : pointer;
+}
 
-.mic-g:hover > .color-1 { fill: #ff888e; }
-.mic-g:hover > .color-2 { fill: #fc656d; }
-.mic-g:hover > .color-3 { fill: #f43d47; }
-.mic-g:hover > .color-4 { fill: #f7d5d9; }
-.mic-g:hover > .color-5 { fill: #f1f1f2; }
-.mic-g:hover > .color-6 { fill: #fd4e50; }
-.mic-g:hover > .color-7 { fill: #f9b4b8; }
-.mic-g:hover > .color-8 { fill: #f7f2f3; }
+.mic-g:hover>.color-1 {
+  fill : #ff888e;
+}
 
-.film-space-g:hover > .color-1 { fill: #ff888e; }
-.film-space-g:hover > .color-2 { fill: #fc656d; }
-.film-space-g:hover > .color-5 { fill: #f1f1f2; }
+.mic-g:hover>.color-2 {
+  fill : #fc656d;
+}
 
-.nerve-centre-g:hover > .color-1 { fill: #ff888e; }
-.nerve-centre-g:hover > .color-2 { fill: #fc656d; }
-.nerve-centre-g:hover > .color-3 { fill: #f43d47; }
-.nerve-centre-g:hover > .color-5 { fill: #f1f1f2; }
-.nerve-centre-g:hover > .color-8{ fill: #f7f2f3; }
+.mic-g:hover>.color-3 {
+  fill : #f43d47;
+}
 
-.bicocca-g:hover > .color-1 { fill: #ff888e; }
-.bicocca-g:hover > .color-2 { fill: #fc656d; }
-.bicocca-g:hover > .color-3 { fill: #f43d47; }
-.bicocca-g:hover > .color-4 { fill: #f7d5d9; }
-.bicocca-g:hover > .color-8 { fill: #f7f2f3; }
+.mic-g:hover>.color-4 {
+  fill : #f7d5d9;
+}
 
-.belgrado-g:hover > .color-1 { fill: #ff888e; }
-.belgrado-g:hover > .color-2 { fill: #fc656d; }
-.belgrado-g:hover > .color-3 { fill: #f43d47; }
-.belgrado-g:hover > .color-4 { fill: #f7d5d9; }
+.mic-g:hover>.color-5 {
+  fill : #f1f1f2;
+}
 
+.mic-g:hover>.color-6 {
+  fill : #fd4e50;
+}
 
-/*
-.belgrado-g:hover > .color-1 { fill: #ff888e; }
-.belgrado-g:hover > .color-2 { fill: #f7d5d9; }
-.belgrado-g:hover > .color-3 { fill: #f43d47; }
-.belgrado-g:hover > .color-5 { fill: #fc656d; }
-.belgrado-g:hover > .color-7 { fill: #f9b4b8; }
+.mic-g:hover>.color-7 {
+  fill : #f9b4b8;
+}
 
+.mic-g:hover>.color-8 {
+  fill : #f7f2f3;
+}
 
+.film-space-g:hover>.color-1 {
+  fill : #ff888e;
+}
 
-*/
+.film-space-g:hover>.color-2 {
+  fill : #fc656d;
+}
 
+.film-space-g:hover>.color-5 {
+  fill : #f1f1f2;
+}
+
+.nerve-centre-g:hover>.color-1 {
+  fill : #ff888e;
+}
+
+.nerve-centre-g:hover>.color-2 {
+  fill : #fc656d;
+}
+
+.nerve-centre-g:hover>.color-3 {
+  fill : #f43d47;
+}
+
+.nerve-centre-g:hover>.color-5 {
+  fill : #f1f1f2;
+}
+
+.nerve-centre-g:hover>.color-8 {
+  fill : #f7f2f3;
+}
+
+.bicocca-g:hover>.color-1 {
+  fill : #ff888e;
+}
+
+.bicocca-g:hover>.color-2 {
+  fill : #fc656d;
+}
+
+.bicocca-g:hover>.color-3 {
+  fill : #f43d47;
+}
+
+.bicocca-g:hover>.color-4 {
+  fill : #f7d5d9;
+}
+
+.bicocca-g:hover>.color-8 {
+  fill : #f7f2f3;
+}
+
+.belgrado-g:hover>.color-1 {
+  fill : #ff888e;
+}
+
+.belgrado-g:hover>.color-2 {
+  fill : #fc656d;
+}
+
+.belgrado-g:hover>.color-3 {
+  fill : #f43d47;
+}
+
+.belgrado-g:hover>.color-4 {
+  fill : #f7d5d9;
+}
+
+/**
+ * .belgrado-g:hover > .color-1 { fill: #ff888e; } .belgrado-g:hover > .color-2
+ * { fill: #f7d5d9; } .belgrado-g:hover > .color-3 { fill: #f43d47; }
+ * .belgrado-g:hover > .color-5 { fill: #fc656d; } .belgrado-g:hover > .color-7
+ * { fill: #f9b4b8; }
+ */
 
 .modal-trans {
-  z-index: 9;
+  z-index : 9;
 }
 
 .modal-close-btn {
-  z-index: 10;
-  cursor: pointer;
+  z-index : 10;
+  cursor  : pointer;
 }
+
 .close-btn {
-  z-index: 11;
-  cursor: pointer;
+  z-index : 11;
+  cursor  : pointer;
 }
 
 .modal__inner {
-  width: 100%;
+  width : 100%;
 }
 
-.modal__inner, .modal__location, .modal__link {
-  z-index: 11;
-  position: absolute;
-  color: #252525;
+.modal__inner,
+.modal__link,
+.modal__location {
+  z-index  : 11;
+  position : absolute;
+  color    : #252525;
 }
 
 .modal-text-class {
-  z-index: 11;
+  z-index : 11;
 }
 
 .modal-text-title {
-  font-family: monospace;
-  padding: 120px 5% 20px 5%;
+  padding     : 120px 5% 20px 5%;
+  font-family : monospace;
 }
 
-.web-link, .map-place {
-  z-index: 12;
+.map-place,
+.web-link {
+  z-index : 12;
 }
 
 .modal-location p {
-  font-family: monospace;
-  text-align: center;
+  text-align  : center;
+  font-family : monospace;
 }
 
 .modal-text-inner {
-  padding: 0 5% 20px 5%;
-  width: 70%;
-  overflow: scroll;
-  height: 80vh;
-  margin-bottom: 20px;
-  max-height: 600px;
+  width         : 70%;
+  height        : 80vh;
+  max-height    : 600px;
+  margin-bottom : 20px;
+  padding       : 0 5% 20px 5%;
+  overflow      : scroll;
 }
 
 .modal-text-class p {
-  font-family: monospace;
-  line-height: 2;
+  font-family : monospace;
+  line-height : 2;
 }
