--- a/public/css/home.css
+++ b/public/css/home.css
@@ -1,3 +1,20 @@
+.modal-content {
+  -webkit-border-radius: 0px !important;
+  -moz-border-radius: 0px !important;
+  border-radius: 0px !important;
+}
+
+h5.modal-title {
+  margin-bottom: 0.5rem;
+  font-family: "Montserrat", sans-serif;
+  font-weight: 900;
+  line-height: 1.1;
+  color: inherit;
+  font-size: 1.75rem;
+  font-style: italic;
+  text-transform: uppercase ;
+}
+
 /* Bold fix */
 .sp-bold {
   font-weight: 600;
