--- a/public/css/home.css
+++ b/public/css/home.css
@@ -5,6 +5,7 @@
 }
 
 h5.modal-title {
+  color: #252525 !important;
   margin-bottom: 0.5rem;
   font-family: "Montserrat", sans-serif;
   font-weight: 900;
