--- a/public/css/app/2.1/timeline.css
+++ b/public/css/app/2.1/timeline.css
@@ -2,12 +2,11 @@
   visibility: hidden;
   white-space: nowrap;
   position: fixed;
-  background-color: lightgreen;
-  border-radius: 5px;
-  border: 1px solid green;
-  font-size: 10px;
+  background-color: #5bc0de;
+  border-radius: 0.25rem;
+  font-size: 1rem;
   font-weight: bold;
-  padding: 3px;
+  padding: 0.5rem;
   z-index: 2003;
 }
 .timetooltip.active {
@@ -19,7 +18,6 @@ mt-timelines {
 mt-timelines .timelines-tick-navigator {
   width: 100%;
   height: 15px;
-  border: 1px solid black;
   border-bottom: 0;
   overflow-x: hidden;
   overflow-y: hidden;
@@ -30,7 +28,6 @@ mt-timelines .timelines-tick-navigator {
 mt-timelines .timelines-tick-navigator .tickHandlerHeader {
   height: 15px;
   width: 150px;
-  border-right: 1px solid black;
   float: left;
 }
 mt-timelines .timelines-tick-navigator .tickHandlerScrollerContainer {
@@ -86,7 +83,7 @@ mt-timelines .timelines-tick-navigator .tickHandlerScrollerContainer .tickHandle
   height: 0;
   border-left: 6px solid transparent;
   border-right: 6px solid transparent;
-  border-top: 12px solid blue;
+  border-top: 12px solid #FE595A;
 }
 mt-timelines .timelines-tick-navigator .tickHandlerScrollerContainer .tickHandlerContainer .tickHandler.cursor {
   cursor: move;
@@ -99,7 +96,6 @@ mt-timelines .timelines-group {
   width: 100%;
   height: calc(100% - 16px);
   /* remove header height, its a patch */
-  border: 1px solid black;
   overflow-x: hidden;
   overflow-y: scroll;
   position: relative;
@@ -110,28 +106,14 @@ mt-timelines .timelines-group .timelinesHeaders {
   width: 150px;
   vertical-align: top;
   float: left;
-  background-color: gray;
-  color: white;
-  border-right: 1px black dashed;
+  background-color: #f7f7f9;
+  color: #fff;
   min-height: 100%;
 }
 mt-timelines .timelines-group .timelinesHeaders .timeline-header {
-  background-color: #999;
+  background-color: #636c72;
   vertical-align: middle;
   overflow: hidden;
-  background: #ffffff;
-  /* Old browsers */
-  /* FF3.6+ */
-  background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #ffffff), color-stop(100%, #e5e5e5));
-  /* Chrome,Safari4+ */
-  background: -webkit-linear-gradient(top, #ffffff 0%, #e5e5e5 100%);
-  /* Chrome10+,Safari5.1+ */
-  /* Opera 11.10+ */
-  /* IE10+ */
-  background: linear-gradient(to bottom, #ffffff 0%, #e5e5e5 100%);
-  /* W3C */
-  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ffffff', endColorstr='#e5e5e5', GradientType=0);
-  /* IE6-9 */
 }
 mt-timelines .timelines-group .timelinesHeaders .timeline-header span {
   top: 50%;
@@ -139,7 +121,7 @@ mt-timelines .timelines-group .timelinesHeaders .timeline-header span {
   margin-top: -9px;
   /* = height/2 */
   padding-left: 5px;
-  color: #888;
+  color: #fff;
 }
 mt-timelines .timelines-group .timelinesContainer {
   vertical-align: top;
@@ -157,13 +139,12 @@ mt-timelines .timelines-group .timelinesContainer .verticalLine {
   position: absolute;
   width: 1px;
   top: 0px;
-  background-color: blue;
-  box-shadow: 0px 0px 3px #888897;
+  background-color: #FE595A;
+  box-shadow: 0 0.1rem 0 #252525;
 }
 mt-timelines .timelines-group .timelinesContainer mt-timeline {
   display: block;
   position: relative;
-  border-top: 1px dotted grey;
 }
 mt-timelines .timelines-group .timelinesContainer mt-timeline .timeline-content {
   overflow: hidden;
@@ -180,8 +161,7 @@ mt-timelines .timelines-group .timelinesContainer mt-timeline.events .timeline-e
   display: inline-block;
   position: absolute;
   height: 80%;
-  background-color: #F0FFE0;
-  border: 1px solid #7A995C;
+  background-color: #FADA28;
 }
 mt-timelines .timelines-group .timelinesContainer mt-timeline.events .timeline-event.highlight {
   top: 1px;
@@ -229,15 +209,15 @@ mt-timelines .timelines-group .timelinesContainer mt-timeline.events .timeline-e
   background: #ffffff;
   /* Old browsers */
   /* FF3.6+ */
-  background: -webkit-gradient(linear, left top, right top, color-stop(0%, #ffffff), color-stop(100%, #ff3019));
+  background: -webkit-gradient(linear, left top, right top, color-stop(0%, #FADA28), color-stop(100%, #F8D349));
   /* Chrome,Safari4+ */
-  background: -webkit-linear-gradient(left, #ffffff 0%, #ff3019 100%);
+  background: -webkit-linear-gradient(left, #FADA28 0%, #F8D349 100%);
   /* Chrome10+,Safari5.1+ */
   /* Opera 11.10+ */
   /* IE10+ */
-  background: linear-gradient(to right, #ffffff 0%, #ff3019 100%);
+  background: linear-gradient(to right, #FADA28 0%, #F8D349 100%);
   /* W3C */
-  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ffffff', endColorstr='#ff3019', GradientType=1);
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr=#FADA28, endColorstr=#F8D349, GradientType=1);
   /* IE6-9 */
 }
 mt-timelines .timelines-group .timelinesContainer mt-timeline.events .timeline-event .right.cursor {
@@ -257,7 +237,6 @@ mt-timelines .timelines-group .timelinesContainer mt-timeline.points mt-point {
   position: absolute;
   top: 3px;
   margin-left: -5px;
-  border: 1px solid white;
 }
 mt-timelines .timelines-group .timelinesContainer mt-timeline.points mt-point.highlight {
   height: 10px;
